--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,16 @@ sphinx-rtd-theme = "*"
 colour-runner = "*"
 pytest = "*"
 pylint = "*"
+yapf = "*"
+flake8 = "*"
+flake8-deprecated = "*"
+flake8-docstrings = "*"
+flake8-rst-docstrings = "*"
+flake8-import-order = "*"
+flake8-bugbear = "*"
+flake8-builtins = "*"
+flake8-commas = "*"
+bandit = "*"
 
 [packages]
 keras = "*"
