Add dbispipeline as python module

--- a/Pipfile
+++ b/Pipfile
@@ -30,6 +30,7 @@ gensim = "*"
 tensorflow = "*"
 sklearn = "*"
 gitpython = "*"
+dbispileline = {git = "ssh://git@git.uibk.ac.at/dbis/software/dbispipeline.git"}
 
 [requires]
 python_version = "3.6"
