--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-absl-py==0.7.0
+absl-py==0.7.1
 astor==0.7.1
-boto3==1.9.112
+boto3==1.9.115
 boto==2.49.0
-botocore==1.12.112
+botocore==1.12.115
 bz2file==0.98
 certifi==2019.3.9
 chardet==3.0.4
@@ -10,6 +10,7 @@ cycler==0.10.0
 docutils==0.14
 gast==0.2.2
 gensim==3.7.1
+git+ssh://git@git.uibk.ac.at/dbis/software/dbispipeline.git@c1cc4550e8cd28c255fa875d93e5a102669bf910#egg=dbispileline
 gitdb2==2.0.5
 gitpython==2.1.11
 grpcio==1.19.0
@@ -24,14 +25,14 @@ markdown==3.0.1
 matplotlib==3.0.3
 mock==2.0.0
 numpy==1.16.2
-pandas==0.24.1
+pandas==0.24.2
 pbr==5.1.3
 protobuf==3.7.0
 pymongo==3.7.2
 pyparsing==2.3.1
 python-dateutil==2.8.0 ; python_version >= '2.7'
 pytz==2018.9
-pyyaml==3.13
+pyyaml==5.1
 requests==2.21.0
 s3transfer==0.2.0
 scikit-learn==0.20.3
