Add feature combination tools

--- a/Pipfile
+++ b/Pipfile
@@ -33,6 +33,7 @@ gitpython = "*"
 dbispileline = {git = "ssh://git@git.uibk.ac.at/dbis/software/dbispipeline.git"}
 tables = "*"
 fuzzywuzzy = {extras = ["speedup"],version = "*"}
+click = "*"
 
 [requires]
 python_version = "3.6"
