--- a/Pipfile
+++ b/Pipfile
@@ -21,13 +21,12 @@ flake8-commas = "*"
 bandit = "*"
 
 [packages]
-keras = "*"
 matplotlib = "*"
 pymongo = "*"
 scikit-learn = "*"
 pandas = "*"
 gensim = "*"
-tensorflow = "*"
+tensorflow = "==1.13.1"
 sklearn = "*"
 gitpython = "*"
 tables = "*"
