--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,52 @@
 absl-py==0.7.1
-astor==0.7.1
-boto3==1.9.115
+astor==0.8.0
+boto3==1.9.171
 boto==2.49.0
-botocore==1.12.115
-bz2file==0.98
-certifi==2019.3.9
+botocore==1.12.171
+certifi==2019.6.16
 chardet==3.0.4
+click==7.0
 cycler==0.10.0
 docutils==0.14
+fuzzywuzzy[speedup]==0.17.0
 gast==0.2.2
-gensim==3.7.1
-git+ssh://git@git.uibk.ac.at/dbis/software/dbispipeline.git@c1cc4550e8cd28c255fa875d93e5a102669bf910#egg=dbispileline
+gensim==3.7.3
+git+ssh://git@git.uibk.ac.at/dbis/software/dbispipeline@70129be808f969ee6b0b4a7b4757644e3c76144a#egg=dbispipeline
 gitdb2==2.0.5
 gitpython==2.1.11
-grpcio==1.19.0
+grpcio==1.21.1
 h5py==2.9.0
 idna==2.8
 jmespath==0.9.4
-keras-applications==1.0.7
-keras-preprocessing==1.0.9
-keras==2.2.4
-kiwisolver==1.0.1
-markdown==3.0.1
-matplotlib==3.0.3
-mock==2.0.0
-numpy==1.16.2
+joblib==0.13.2
+keras-applications==1.0.8
+keras-preprocessing==1.1.0
+kiwisolver==1.1.0
+markdown==3.1.1
+matplotlib==3.1.0
+mock==3.0.5
+numexpr==2.6.9
+numpy==1.16.4
 pandas==0.24.2
-pbr==5.1.3
-protobuf==3.7.0
-pymongo==3.7.2
-pyparsing==2.3.1
+protobuf==3.8.0
+pymongo==3.8.0
+pyparsing==2.4.0
 python-dateutil==2.8.0 ; python_version >= '2.7'
-pytz==2018.9
-pyyaml==5.1
-requests==2.21.0
-s3transfer==0.2.0
-scikit-learn==0.20.3
-scipy==1.2.1
+python-levenshtein==0.12.0
+pytz==2019.1
+requests==2.22.0
+s3transfer==0.2.1
+scikit-learn==0.21.2
+scipy==1.3.0
 six==1.12.0
 sklearn==0.0
-smart-open==1.8.0
+smart-open==1.8.4
 smmap2==2.0.5
+tables==3.5.2
 tensorboard==1.13.1
 tensorflow-estimator==1.13.0
 tensorflow==1.13.1
 termcolor==1.1.0
-urllib3==1.24.1 ; python_version >= '3.4'
-werkzeug==0.14.1
-wheel==0.33.1 ; python_version >= '3'
+urllib3==1.25.3 ; python_version >= '3.4'
+werkzeug==0.15.4
+wheel==0.33.4 ; python_version >= '3'
