--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -24,14 +24,14 @@ gitpython==2.1.11
 idna==2.8
 imagesize==1.1.0
 importlib-metadata==0.18
-isort==4.3.20
+isort==4.3.21
 jinja2==2.10.1
 lazy-object-proxy==1.4.1
 markupsafe==1.1.1
 mccabe==0.6.1
-more-itertools==7.0.0 ; python_version > '2.7'
+more-itertools==7.1.0
 packaging==19.0
-pbr==5.3.0
+pbr==5.3.1
 pluggy==0.12.0
 py==1.8.0
 pycodestyle==2.5.0
@@ -40,16 +40,16 @@ pyflakes==2.1.1
 pygments==2.4.2
 pylint==2.3.1
 pyparsing==2.4.0
-pytest==4.6.3
+pytest==5.0.0
 pytz==2019.1
 pyyaml==5.1.1
 requests==2.22.0
 restructuredtext-lint==1.3.0
 six==1.12.0
 smmap2==2.0.5
-snowballstemmer==1.2.1
+snowballstemmer==1.9.0
 sphinx-rtd-theme==0.4.3
-sphinx==2.1.1
+sphinx==2.1.2
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
 sphinxcontrib-htmlhelp==1.0.2
