--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 absl-py==0.7.1
 astor==0.8.0
-boto3==1.9.171
+boto3==1.9.180
 boto==2.49.0
-botocore==1.12.171
+botocore==1.12.180
 certifi==2019.6.16
 chardet==3.0.4
 click==7.0
@@ -11,9 +11,8 @@ docutils==0.14
 fuzzywuzzy[speedup]==0.17.0
 gast==0.2.2
 gensim==3.7.3
-git+ssh://git@git.uibk.ac.at/dbis/software/dbispipeline@70129be808f969ee6b0b4a7b4757644e3c76144a#egg=dbispipeline
-gitdb2==2.0.5
-gitpython==2.1.11
+git+ssh://git@git.uibk.ac.at/dbis/software/dbispipeline@0dfb97f5af2192c057fc2a2725b931d9b282e784#egg=dbispipeline
+google-pasta==0.1.7
 grpcio==1.21.1
 h5py==2.9.0
 idna==2.8
@@ -29,7 +28,6 @@ numexpr==2.6.9
 numpy==1.16.4
 pandas==0.24.2
 protobuf==3.8.0
-pymongo==3.8.0
 pyparsing==2.4.0
 python-dateutil==2.8.0 ; python_version >= '2.7'
 python-levenshtein==0.12.0
@@ -41,12 +39,12 @@ scipy==1.3.0
 six==1.12.0
 sklearn==0.0
 smart-open==1.8.4
-smmap2==2.0.5
 tables==3.5.2
-tensorboard==1.13.1
-tensorflow-estimator==1.13.0
-tensorflow==1.13.1
+tensorboard==1.14.0
+tensorflow-estimator==1.14.0
+tensorflow==1.14.0
 termcolor==1.1.0
 urllib3==1.25.3 ; python_version >= '3.4'
 werkzeug==0.15.4
 wheel==0.33.4 ; python_version >= '3'
+wrapt==1.11.2
