--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,7 @@ dbispipeline = {git = "ssh://git@git.uibk.ac.at/dbis/software/dbispipeline"}
 sparqlwrapper = "*"
 qwikidata = "*"
 billboard-py = "*"
+musicbrainzngs = "*"
 
 [requires]
 python_version = "3.6"
