--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,12 @@ ignore = D401, W504
 exclude = .git docs
 import_order_style = google
 
+[isort]
+force_single_line = True
+force_sort_within_sections = True
+lexicographical = True
+single_line_exclusions = typing
+
 [yapf]
 based_on_style = google
 column_limit = 79
