--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ test:
   image: python:3.7-slim
   stage: test
   script:
+    - apt-get install -y --no-install-recommends python3-dev build-essential
     - pip install pipenv
     - pipenv sync && pipenv sync --dev
     - pipenv run make test
