--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
       - id: end-of-file-fixer
       - id: double-quote-string-fixer
       - id: fix-encoding-pragma
+        args: [--remove]
       - id: check-yaml
       - id: check-added-large-files
       - id: check-ast
