--- a/data/links.yaml
+++ b/data/links.yaml
@@ -1,6 +1,7 @@
 ---
 datasets:
   - music/acousticbrainz
+  - music/billboard
   - music/millionsongdataset
   - music/hit_song_prediction_ismir2019
   - wip_mikevo/hit_song_prediction_ismir2020
