--- a/data/links.yaml
+++ b/data/links.yaml
@@ -5,4 +5,5 @@ datasets:
   - music/millionsongdataset
   - music/hit_song_prediction_ismir2019
   - wip_mikevo/hit_song_prediction_ismir2020
+  - wip_mikevo/hit_song_prediction_lastfm
   - wip_mikevo/hit_song_prediction_lfm_popularity
