--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,9 @@ column_limit = 79
 source =
     hit_prediction_code
 
+[tool:pytest]
+addopts = --cov=hit_prediction_code --cov-report html
+
 omit =
     env/*
     venv/*
