Update and fix package versions

--- a/Pipfile
+++ b/Pipfile
@@ -5,53 +5,54 @@ verify_ssl = true
 
 [dev-packages]
 PyInstaller = "*"
-bandit = "*"
+bandit = "==1.7.0"
 bumpversion = "*"
 colour-runner = "*"
-coverage = "*"
+coverage = "==5.4"
 docformatter = "*"
-flake8 = "*"
+flake8 = "==3.8.4"
 flake8-bugbear = "*"
 flake8-builtins = "*"
 flake8-commas = "*"
 flake8-deprecated = "*"
 flake8-docstrings = "*"
+flake8-isort = "*"
+isort = "==5.7.0"
+jupyterlab = "==3.0.6"
 m2r = "*"
 pep8-naming = "*"
-pylint = "*"
-pytest = "*"
-pytype = "*"
-sphinx = "*"
+pylint = "==2.6.0"
+pytest = "==6.2.2"
+pytest-cov = "==2.11.1"
+pytype = "==2021.1.28"
+sphinx = "==3.4.3"
 sphinx-rtd-theme = "*"
-tox = "*"
+tox = "==3.21.3"
 watchdog = "*"
 wheel = "*"
-yapf = "*"
-isort = "*"
-flake8-isort = "*"
-jupyterlab = "*"
-pytest-cov = "*"
+yapf = "==0.30.0"
 
 [packages]
 hit_prediction_code = {editable = true, path = "."}
-dbispipeline = "==0.8.14"
-gensim = "*"
-tensorflow = "==1.15.2"
-tables = "*"
-fuzzywuzzy = {extras = ["speedup"], version = "*"}
-sparqlwrapper = "*"
-qwikidata = "*"
-billboard-py = "*"
-musicbrainzngs = "*"
-requests = "*"
-librosa = "*"
-youtube-dl = "*"
-pyarrow = "*"
-seaborn = "*"
-pylast = "*"
-pymorton = "*"
-tabulate = "*"
-logzero = "*"
+billboard-py = "==6.2.1"
+dbispipeline = "==0.8.15"
+fuzzywuzzy = {extras = ["speedup"], version = "==0.18.0"}
+gensim = "==3.8.3"
+librosa = "==0.8.0"
+logzero = "==1.6.3"
+musicbrainzngs = "==0.7.1"
+pyarrow = "==3.0.0"
+pylast = "==4.1.0"
+pymorton = "==1.0.5"
+qwikidata = "==0.4.0"
+requests = "==2.25.1"
+scikit-learn = "==0.24.1"
+seaborn = "==0.11.1"
+sparqlwrapper = "==1.8.5"
+tables = "==3.6.1"
+tabulate = "==0.8.7"
+tensorflow = "==2.4.1"
+youtube-dl = "==2021.1.24.1"
 
 [requires]
-python_version = "3.6"
+python_version = "3.8"
