--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = py36, py37, flake8
+envlist = py36, py37, py38, flake8
 
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 hit_prediction_code
+commands = flake8 src tests
 
 [testenv]
 commands = python setup.py test
