--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 ---
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+    rev: v4.0.1
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -30,7 +30,7 @@ repos:
         types: ['python']
         language: system
   - repo: https://github.com/kynan/nbstripout
-    rev: master
+    rev: 0.5.0
     hooks:
       - id: nbstripout
         files: ".ipynb"
