--- a/data/links.yaml
+++ b/data/links.yaml
@@ -7,3 +7,4 @@ datasets:
   - wip_mikevo/hit_song_prediction_ismir2020
   - wip_mikevo/hit_song_prediction_lastfm
   - wip_mikevo/hit_song_prediction_lfm_popularity
+  - music/hit_song_prediction_msd_bb_lfm_ab
