Add a transformer that creates pais and labels for further processing

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ bumpversion = "*"
 colour-runner = "*"
 coverage = "==5.4"
 docformatter = "*"
-flake8 = "==3.8.4"
+flake8 = "==4.0.1"
 flake8-bugbear = "*"
 flake8-builtins = "*"
 flake8-commas = "*"
@@ -42,6 +42,7 @@ gensim = "==3.8.3"
 librosa = "==0.8.0"
 logzero = "==1.6.3"
 musicbrainzngs = "==0.7.1"
+numpy = "==1.21.5"
 pyarrow = "==3.0.0"
 pylast = "==4.1.0"
 pymorton = "==1.0.5"
@@ -52,7 +53,7 @@ seaborn = "==0.11.1"
 sparqlwrapper = "==1.8.5"
 tables = "==3.6.1"
 tabulate = "==0.8.7"
-tensorflow = "==2.4.1"
+tensorflow = "==2.8.0"
 youtube-dl = "==2021.1.24.1"
 
 [requires]
